# recruitraptor

./: .env.example  .gitignore  Makefile  docker-compose.yml  mock_enrich.json
docs/: CLAUDE.md  claude.md  instructions.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/candidates/: page.tsx
frontend/src/app/candidates/[id]/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/candidates/: AdvancedFilterPanel.tsx  CandidateCard.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: MatchScoreRing.tsx  SkillBadge.tsx
frontend/src/components/upload/: Dropzone.tsx
frontend/src/lib/: api.ts  jobs.ts
infrastructure/scripts/: setup.sh
services/data-enrichment/: IMPLEMENTATION_SUMMARY.md  README.md  TESTING_GUIDE.md  curl_tests.sh  pyproject.toml  quick_test.py  requirements.txt  test_api.py  test_enrichment_service.py
services/data-enrichment/alembic/: env.py
services/data-enrichment/alembic/versions/: f4a12e2ef468_initial_migration.py
services/data-enrichment/src/data_enrichment/: main.py
services/data-enrichment/src/data_enrichment/api/: routes.py
services/data-enrichment/src/data_enrichment/core/: analyzers.py  config.py  conflict_resolver.py  data_integrator.py  database.py  models.py  models_sql.py  skill_analyzer.py
services/data-enrichment/src/data_enrichment/services/: enrichment_service.py
services/data-enrichment/src/data_enrichment/utils/: logger.py
services/narrative-engine/: IMPLEMENTATION_SUMMARY.md  README.md  TEST_RESULTS_SUMMARY.md  mock_enrichment_service.py  narrative_functionality_test_results.json  pyproject.toml  sachin_narrative_generation_results.json  test_narrative_functionality.py  test_narrative_real_profile.py  test_narrative_service.py
services/narrative-engine/src/narrative_engine/: main.py
services/narrative-engine/src/narrative_engine/api/: routes.py
services/narrative-engine/src/narrative_engine/core/: config.py  models.py
services/narrative-engine/src/narrative_engine/services/: llm_service.py  narrative_service.py
services/narrative-engine/src/narrative_engine/utils/: logger.py
services/profile-discovery/: README.md  debug_discovery_response.py  debug_test.py  debug_validation.py  longer_test_resume.txt  parsed_resume.json  pyproject.toml  pyrightconfig.json  resume_output.json  sachin_real_resume.txt  simple_test_resume.txt  test_direct_validation.py  test_full_pipeline.py  test_real_resume_data.py  test_resume_for_discovery.txt  test_sachin_real_profile.py  test_sachin_real_profile_fixed.py  test_with_real_data.py
services/profile-discovery/src/profile_discovery/: main.py  sachin_real_resume.txt
services/profile-discovery/src/profile_discovery/api/: routes.py
services/profile-discovery/src/profile_discovery/clients/: github_client.py  linkedin_client.py  search_client.py
services/profile-discovery/src/profile_discovery/core/: config.py  models.py  permutators.py
services/profile-discovery/src/profile_discovery/services/: discovery_service.py
services/profile-discovery/src/profile_discovery/utils/: logger.py
services/profile-discovery/tasks/: todo.md
services/profile-discovery/tests/: test_api.py
services/resume-parser/: README.md  pyproject.toml
services/resume-parser/src/resume_parser/: main.py
services/resume-parser/src/resume_parser/api/: routes.py
services/resume-parser/src/resume_parser/core/: config.py  extractor.py  models.py  parser.py
services/resume-parser/src/resume_parser/utils/: education_filters.py  logger.py
services/resume-parser/tasks/: todo.md
services/resume-parser/tests/: conftest.py  test-resume.txt  test_api.py  test_education_filters.py  test_extractor.py  test_github_extraction.py  test_parser.py
shared/utils/: logger.py
