[tool.poetry]
name = "profile-discovery"
version = "0.1.0"
description = "Profile Discovery Service for AI Recruiter Agent"
authors = ["AI Recruiter Agent Team"]
readme = "README.md"
packages = [{include = "profile_discovery", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
httpx = "^0.25.2"
PyGithub = "^1.59.1"
google-search-results = "^2.4.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
redis = "^5.0.1"
structlog = "^23.2.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
responses = "^0.24.1"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 